--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "baseUrl": "./src",
+    "downlevelIteration": true,
   "paths": {
     "@progress/kendo-react-common": ["path/to/kendo-react-common"]
   }
